--- a/JavaScript/puslespill/puzzle.css
+++ b/JavaScript/puslespill/puzzle.css
@@ -1,6 +1,15 @@
-div.container{
-    font-size: 0,5px;
-    
-}
 
+        div.container{
+            font-size: 0px;
+        }
+
+       
+
+        img {
+
+            float: left;
+            clear: both;
+            font-size: 10px;
+        }
+   
 
